create and visualize logic gates data

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,10 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b3d4a57e",
+   "id": "973cf68a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#import libraries\n",
     "from sklearn.linear_model import Perceptron\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -16,10 +17,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aff6501f",
+   "id": "7a406d05",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#create AND's logic gates data\n",
+    "data=[[0,0],[1,1],[0,1],[1,0]]\n",
+    "labels=[0,1,0,0]\n",
+    "plt.scatter([points[0] for points in data],)"
+   ]
   }
  ],
  "metadata": {
