#train perceptron on XOR gate

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5f89693c",
+   "id": "aeb1f4c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "258cf27c",
+   "id": "918d0d49",
    "metadata": {},
    "outputs": [
     {
@@ -41,15 +41,54 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "c338957f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#train perceptron on AND gate\n",
+    "classifier=Perceptron(max_iter=40)\n",
+    "classifier.fit(data,labels)\n",
+    "print(classifier.score(data,labels))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5fecdc43",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#\n",
+    "labels=[0,0,1,1]\n",
+    "classifier=Perceptron(max_iter=40)\n",
+    "classifier.fit(data,labels)\n",
+    "print(classifier.score(data,labels))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6fa170cb",
+   "id": "74a1e38e",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "classifier=perceptron(max_iter=40)\n",
-    "classifier.fit(data,labels)\n",
-    "print(train.score(data,labels))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
