#train perceptron on OR gates

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "aeb1f4c5",
+   "id": "612001e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "918d0d49",
+   "id": "182bd46d",
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c338957f",
+   "id": "14305358",
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5fecdc43",
+   "id": "8f4a96f9",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
     }
    ],
    "source": [
-    "#\n",
+    "#train perceptron on XOR gate\n",
     "labels=[0,0,1,1]\n",
     "classifier=Perceptron(max_iter=40)\n",
     "classifier.fit(data,labels)\n",
@@ -85,10 +85,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74a1e38e",
+   "id": "1e673ffa",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "labels=[0,1,1,1]"
+   ]
   }
  ],
  "metadata": {
